--- a/wxtijiantong/css/setList.css
+++ b/wxtijiantong/css/setList.css
@@ -115,4 +115,4 @@ input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
-/*# sourceMappingURL=base.css.map */
+/*# sourceMappingURL=setList.css.map */
