--- a/wxtijiantong/css/cardList.css
+++ b/wxtijiantong/css/cardList.css
@@ -115,4 +115,91 @@ input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
-/*# sourceMappingURL=base.css.map */
+html {
+  height: 100%;
+}
+html body {
+  height: 100%;
+}
+html body .container {
+  position: relative;
+  height: 100%;
+}
+html body .container .top-section {
+  position: absolute;
+  z-index: 99;
+  height: 1.375rem;
+  width: 100%;
+  background-color: #209AF9;
+  padding: 0.21875rem;
+}
+html body .container .top-section ul {
+  margin: 0 auto;
+  width: 4.375rem;
+  border: 1px solid white;
+  border-radius: 0.15625rem;
+}
+html body .container .top-section ul li {
+  width: 2.15625rem;
+  line-height: 0.875rem;
+  color: white;
+  text-align: center;
+}
+html body .container .top-section ul .active {
+  background-color: white;
+  color: #209AF9;
+}
+html body .container .menu-box {
+  position: absolute;
+  z-index: 99;
+  top: 1.375rem;
+  height: 1.09375rem;
+  width: 100%;
+  background-color: white;
+  padding: 0.25rem;
+}
+html body .container .menu-box ul li {
+  width: 33%;
+  line-height: 0.59375rem;
+  text-align: center;
+  font-size: 0.375rem;
+  color: #98989f;
+  border-left: 1px solid #e7e7e7;
+}
+html body .container .menu-box ul li:nth-child(1) {
+  border-left: none;
+}
+#all-nav {
+  position: fixed;
+  bottom: 0;
+  z-index: 99;
+  width: 100%;
+  text-align: center;
+  background-color: white;
+  border-top: 1px solid #e7e7e7;
+  box-shadow: 0 0 10px 0 rgba(155, 143, 143, 0.6);
+  -webkit-box-shadow: 0 0 10px 0 rgba(155, 143, 143, 0.6);
+  -moz-box-shadow: 0 0 10px 0 rgba(155, 143, 143, 0.6);
+  padding: 0.1875rem 0;
+}
+#all-nav a {
+  display: inline-block;
+  box-sizing: border-box;
+  height: 1rem;
+  width: 25%;
+  border-right: 1px solid #e7e7e7;
+}
+#all-nav a:nth-child(4) {
+  border-right: none;
+}
+#all-nav a i {
+  font-size: 0.4375rem;
+  line-height: 0.46875rem;
+  color: #98989f;
+}
+#all-nav a p {
+  font-size: 0.375rem;
+  color: #98989f;
+  line-height: 0.5625rem;
+}
+/*# sourceMappingURL=cardList.css.map */
