--- a/wxtijiantong/css/home.less
+++ b/wxtijiantong/css/home.less
@@ -244,9 +244,9 @@
         }
     }
 }
+//全局导航条
 #all-nav {
     position: fixed;
-    margin-top: 1*@rex;
     bottom: 0;
     z-index: 99;
     width: 100%;
@@ -256,11 +256,12 @@
     box-shadow: 0 0 10px 0 rgba(155,143,143,0.6);
     -webkit-box-shadow: 0 0 10px 0 rgba(155,143,143,0.6);
     -moz-box-shadow: 0 0 10px 0 rgba(155,143,143,0.6);
+        padding: 0.6*@rex 0;
+    
     a {
         display: inline-block;
-        padding: 0.6*@rex 0;
         box-sizing: border-box;
-        height: 4.4*@rex;
+        height: 3.2*@rex;
         width: 25%;
         border-right: 1px solid @mainBorder;
         &:nth-child(4) {
