--- a/wxtijiantong/css/cardDetail.less
+++ b/wxtijiantong/css/cardDetail.less
@@ -28,7 +28,8 @@
         .box-r {
             position: absolute;
             right: 1*@rex;
-            bottom: 2*@rex;
+//          bottom: 2*@rex;
+            top: 1*@rex;
             max-width: 8*@rex;
             overflow: hidden;
             h6 {
@@ -40,6 +41,7 @@
                 font-size: 1.2*@rex;
                 color: @smallTex;
                 text-align: right;
+                margin-top: 0.5*@rex;
             }
         }
     }
@@ -81,7 +83,7 @@
     box-shadow: 0 0 10px 0 rgba(155,143,143,0.6);
     -webkit-box-shadow: 0 0 10px 0 rgba(155,143,143,0.6);
     -moz-box-shadow: 0 0 10px 0 rgba(155,143,143,0.6);
-    padding: 0.6*@rex 0.6*@rex 0.6*@rex 9*@rex;
+    padding: 0.6*@rex 1*@rex 0.6*@rex 9*@rex;
     .to-cart{
         position: absolute;
         left: 1*@rex;
