--- a/wxtijiantong/css/cardDetail.css
+++ b/wxtijiantong/css/cardDetail.css
@@ -142,7 +142,7 @@ input[type=number]::-webkit-outer-spin-button {
 .container .goods-info .box-r {
   position: absolute;
   right: 0.3125rem;
-  bottom: 0.625rem;
+  top: 0.3125rem;
   max-width: 2.5rem;
   overflow: hidden;
 }
@@ -155,6 +155,7 @@ input[type=number]::-webkit-outer-spin-button {
   font-size: 0.375rem;
   color: #98989f;
   text-align: right;
+  margin-top: 0.15625rem;
 }
 .container .main-section {
   margin-top: 0.3125rem;
@@ -190,7 +191,7 @@ input[type=number]::-webkit-outer-spin-button {
   box-shadow: 0 0 10px 0 rgba(155, 143, 143, 0.6);
   -webkit-box-shadow: 0 0 10px 0 rgba(155, 143, 143, 0.6);
   -moz-box-shadow: 0 0 10px 0 rgba(155, 143, 143, 0.6);
-  padding: 0.1875rem 0.1875rem 0.1875rem 2.8125rem;
+  padding: 0.1875rem 0.3125rem 0.1875rem 2.8125rem;
 }
 #go-buy .to-cart {
   position: absolute;
@@ -212,4 +213,4 @@ input[type=number]::-webkit-outer-spin-button {
   outline: none;
   font-size: 0.375rem;
 }
-/*# sourceMappingURL=detail.css.map */
+/*# sourceMappingURL=cardDetail.css.map */
