--- a/wxtijiantong/css/setDetail.css
+++ b/wxtijiantong/css/setDetail.css
@@ -115,110 +115,70 @@ input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
-.container .cart-box {
+.container .goods-info {
   background-color: white;
-  padding: 0 0.3125rem;
-  padding-bottom: 0.3125rem;
-}
-.container .cart-box .cart-title {
-  height: 1.375rem;
-  line-height: 1.375rem;
-  font-size: 0.4375rem;
+  height: 2.5rem;
+  position: relative;
+  padding: 0.3125rem 3.125rem 0.3125rem 0.3125rem;
   border-bottom: 1px solid #e7e7e7;
 }
-.container .cart-box .cart-list {
-  border-bottom: 1px dashed #e7e7e7;
-  padding-bottom: 0.3125rem;
-}
-.container .cart-box .cart-list .cart-box {
-  position: relative;
-  min-height: 2.5rem;
-  width: 100%;
-  padding: 0.3125rem 0.3125rem 0.3125rem 1.875rem;
-  margin-bottom: 0.3125rem;
-}
-.container .cart-box .cart-list .cart-box img {
-  position: absolute;
-  display: block;
-  left: 0;
-  height: 1.5625rem;
-  width: 1.5625rem;
-  border-radius: 0.09375rem;
-}
-.container .cart-box .cart-list .cart-box .cart-info {
-  position: relative;
-  display: block;
-  width: 100%;
-  padding-right: 1.875rem;
-  margin-bottom: 0.46875rem;
-}
-.container .cart-box .cart-list .cart-box .cart-info h6 {
-  font-size: 0.375rem;
-  font-weight: 400;
-  line-height: 14px;
-}
-.container .cart-box .cart-list .cart-box .cart-info .price {
-  position: absolute;
-  right: -0.3125rem;
-  top: 0;
-  font-size: 0.375rem;
-  text-align: right;
-  color: #98989f;
-}
-.container .cart-box .cart-list .cart-box .cart-info .price p {
-  color: #333333;
-  margin-bottom: 0.0625rem;
-}
-.container .cart-box .cart-list .cart-box .control {
-  height: 0.78125rem;
-  line-height: 0.78125rem;
-}
-.container .cart-box .cart-list .cart-box .control .count-control {
-  width: 3.125rem;
-  height: 0.78125rem;
-  border: 1px solid #e7e7e7;
-}
-.container .cart-box .cart-list .cart-box .control .delete-control {
-  width: 1.25rem;
-  text-align: right;
-}
-.container .cart-box .cart-list .cart-box .control .delete-control i {
-  font-size: 0.4375rem;
-  color: #98989f;
-}
-.container .cart-box .all-price {
-  margin: 0.3125rem 0;
-  text-align: right;
+.container .goods-info .box-l h6 {
+  color: #209AF9;
   font-size: 0.5rem;
 }
-#gocheck {
-  position: fixed;
-  bottom: 0;
-  z-index: 99;
-  width: 100%;
-  height: 2.8125rem;
-  background-color: white;
-  text-align: center;
-  padding: 0 0.3125rem;
-}
-#gocheck .all-price {
-  line-height: 1.125rem;
+.container .goods-info .box-l p {
+  margin-top: 0.15625rem;
   font-size: 0.375rem;
-}
-#gocheck .all-price .red {
-  color: #FF4400;
-  font-weight: bold;
-}
-#gocheck .all-price .gray {
   color: #98989f;
-}
-#gocheck .btn {
-  display: block;
   height: 1.25rem;
-  line-height: 1.25rem;
+  line-height: 0.625rem;
+  overflow: hidden;
+}
+.container .goods-info .box-r {
+  position: absolute;
+  right: 0.3125rem;
+  top: 0.3125rem;
+  max-width: 2.5rem;
+  overflow: hidden;
+}
+.container .goods-info .box-r h6 {
+  font-size: 0.5625rem;
+  color: #FF4400;
+  text-align: right;
+}
+.container .goods-info .box-r p {
+  font-size: 0.375rem;
+  color: #98989f;
+  text-align: right;
+  margin-top: 0.15625rem;
+}
+.container .main-section {
+  margin-top: 0.3125rem;
+  background-color: white;
+  border-top: 1px solid #e7e7e7;
+  border-bottom: 1px solid #e7e7e7;
+}
+#go-buy {
+  position: fixed;
+  z-index: 99;
+  bottom: 0;
   width: 100%;
+  height: 1.375rem;
+  text-align: center;
+  background-color: white;
+  border-top: 1px solid #e7e7e7;
+  box-shadow: 0 0 10px 0 rgba(155, 143, 143, 0.6);
+  -webkit-box-shadow: 0 0 10px 0 rgba(155, 143, 143, 0.6);
+  -moz-box-shadow: 0 0 10px 0 rgba(155, 143, 143, 0.6);
+  padding: 0.15625rem;
+}
+#go-buy .btn {
+  display: block;
+  width: 100%;
+  height: 1.0625rem;
+  line-height: 1.0625rem;
   background-color: #209AF9;
   color: white;
-  border-radius: 0.15625rem;
+  font-size: 0.375rem;
 }
-/*# sourceMappingURL=shoppingCart.css.map */
+/*# sourceMappingURL=setDetail.css.map */
