--- a/wxtijiantong/css/shopList.css
+++ b/wxtijiantong/css/shopList.css
@@ -115,4 +115,124 @@ input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+.container .top-section {
+  height: 1.375rem;
+  width: 100%;
+  background-color: #209AF9;
+  color: white;
+  text-align: center;
+  line-height: 0.75rem;
+  font-size: 0.4375rem;
+  padding: 0.3125rem 0;
+}
+.container .top-section span {
+  margin-right: 0.3125rem;
+}
+.container .top-section div {
+  display: inline-block;
+  background-color: white;
+  width: 80%;
+  height: 0.78125rem;
+  border-radius: 0.9375rem;
+  text-align: left;
+}
+.container .top-section div .iconfont {
+  color: #98989f;
+  font-size: 0.4375rem;
+  margin-left: 0.3125rem;
+}
+.container .main-box .main-list .list-box {
+  background-color: white;
+  margin-bottom: 0.3125rem;
+  border-top: 1px solid #e7e7e7;
+  border-bottom: 1px solid #e7e7e7;
+}
+.container .main-box .main-list .list-box:nth-child(1) {
+  border-top: none;
+}
+.container .main-box .main-list .list-box .list-top {
+  position: relative;
+  padding: 0.3125rem 0.3125rem 0.3125rem 3.125rem;
+  border-bottom: 1px solid #e7e7e7;
+}
+.container .main-box .main-list .list-box .list-top img {
+  position: absolute;
+  top: 0.3125rem;
+  left: 0.3125rem;
+  height: 1.875rem;
+  width: 2.5rem;
+  border-radius: 0.09375rem;
+}
+.container .main-box .main-list .list-box .list-top h6 {
+  font-weight: 400;
+  font-size: 0.4375rem;
+  margin-bottom: 0.3125rem;
+}
+.container .main-box .main-list .list-box .list-top p {
+  font-size: 0.375rem;
+  color: #98989f;
+  line-height: 0.5625rem;
+}
+.container .main-box .main-list .list-box .list-more .list-more-box {
+  border-bottom: 1px solid #e7e7e7;
+  font-size: 0.375rem;
+  text-align: center;
+}
+.container .main-box .main-list .list-box .list-more .list-more-box .more-set {
+  width: 30%;
+  border-right: 1px solid #e7e7e7;
+  padding: 0.3125rem 0;
+}
+.container .main-box .main-list .list-box .list-more .list-more-box .more-price {
+  width: 45%;
+  border-right: 1px solid #e7e7e7;
+  padding: 0.15625rem;
+}
+.container .main-box .main-list .list-box .list-more .list-more-box .more-price .discount-price {
+  color: #FF4400;
+}
+.container .main-box .main-list .list-box .list-more .list-more-box .more-price .sale-box {
+  display: inline-block;
+  height: 0.6875rem;
+  line-height: 0.6875rem;
+  border: 1px solid #FF4400;
+  border-radius: 0.09375rem;
+}
+.container .main-box .main-list .list-box .list-more .list-more-box .more-price .sale-box em {
+  display: inline-block;
+  background-color: #FF4400;
+  color: white;
+  padding: 0 0.125rem;
+  height: 0.6875rem;
+  font-style: normal;
+  font-weight: normal;
+}
+.container .main-box .main-list .list-box .list-more .list-more-box .more-price .sale-box i {
+  display: inline-block;
+  color: #FF4400;
+  padding-right: 0.09375rem;
+  font-style: normal;
+  font-weight: normal;
+}
+.container .main-box .main-list .list-box .list-more .list-more-box .more-btn {
+  width: 25%;
+  padding: 0.15625rem 0;
+}
+.container .main-box .main-list .list-box .list-more .list-more-box .more-btn a {
+  display: inline-block;
+  background-color: #209AF9;
+  padding: 0.15625rem 0.625rem;
+  color: white;
+  border-radius: 0.15625rem;
+}
+.container .main-box .main-list .list-box .btn-all {
+  height: 0.9375rem;
+  line-height: 0.9375rem;
+  font-size: 0.375rem;
+  color: #98989f;
+  text-align: center;
+}
+.container .main-box .main-list .list-box .btn-all .iconfont {
+  margin-left: 0.0625rem;
+}
 /*# sourceMappingURL=shopList.css.map */
