--- a/wxtijiantong/css/cardList.less
+++ b/wxtijiantong/css/cardList.less
@@ -71,7 +71,7 @@ html {
     -moz-box-shadow: 0 0 10px 0 rgba(155,143,143,0.6);
     padding: 0.6*@rex 0;
     a {
-        display: inline-block;
+        display: block;
         box-sizing: border-box;
         height: 3.2*@rex;
         width: 25%;
