--- a/wxtijiantong/css/shopList.less
+++ b/wxtijiantong/css/shopList.less
@@ -10,7 +10,7 @@
         font-size: 1.4*@rex;
         padding: 1*@rex 0;
         span{
-            margin-right: 1*@rex;
+            margin-left: 0.5*@rex;
         }
         div{
             display: inline-block;
