--- a/wxtijiantong/css/cardList.css
+++ b/wxtijiantong/css/cardList.css
@@ -183,7 +183,7 @@ html body .container .menu-box ul li:nth-child(1) {
   padding: 0.1875rem 0;
 }
 #all-nav a {
-  display: inline-block;
+  display: block;
   box-sizing: border-box;
   height: 1rem;
   width: 25%;
