--- a/wxtijiantong/css/home.css
+++ b/wxtijiantong/css/home.css
@@ -366,7 +366,7 @@ input[type=number]::-webkit-outer-spin-button {
   padding: 0.1875rem 0;
 }
 #all-nav a {
-  display: inline-block;
+  display: block;
   box-sizing: border-box;
   height: 1rem;
   width: 25%;
