--- a/wxtijiantong/css/setList.css
+++ b/wxtijiantong/css/setList.css
@@ -116,13 +116,79 @@ input[type=number]::-webkit-outer-spin-button {
   margin: 0;
 }
 .container .top-section {
-  display: block;
   height: 1.375rem;
   width: 100%;
-  border: none;
-  outline: none;
   background-color: #209AF9;
   color: white;
+  text-align: center;
+  line-height: 0.75rem;
+  font-size: 0.4375rem;
+  padding: 0.3125rem 0;
+}
+.container .top-section span {
+  margin-left: 0.15625rem;
+}
+.container .top-section div {
+  display: inline-block;
+  background-color: white;
+  width: 80%;
+  height: 0.78125rem;
+  border-radius: 0.9375rem;
+  text-align: left;
+}
+.container .top-section div .iconfont {
+  color: #98989f;
+  font-size: 0.4375rem;
+  margin-left: 0.3125rem;
+}
+.container .main-wrap ul li .list-box {
+  display: block;
+  background-color: white;
+  position: relative;
+  padding: 0.3125rem 3.125rem 0.3125rem 0.3125rem;
+  border-bottom: 1px solid #e7e7e7;
+}
+.container .main-wrap ul li .list-box .box-l {
+  min-height: 1.5625rem;
+}
+.container .main-wrap ul li .list-box .box-l h6 {
+  color: #209AF9;
+  font-size: 0.5rem;
+  font-weight: normal;
+}
+.container .main-wrap ul li .list-box .box-l p {
+  margin-top: 0.15625rem;
+  font-size: 0.375rem;
+  color: #98989f;
+  line-height: 0.5rem;
+  max-height: 1.5rem;
+  overflow: hidden;
+}
+.container .main-wrap ul li .list-box .box-r {
+  position: absolute;
+  right: 0.3125rem;
+  top: 0.3125rem;
+  max-width: 2.5rem;
+  overflow: hidden;
+}
+.container .main-wrap ul li .list-box .box-r h6 {
+  font-size: 0.5rem;
+  color: #FF4400;
+  text-align: right;
+  font-weight: normal;
+}
+.container .main-wrap ul li .list-box .box-r p {
+  font-size: 0.375rem;
+  color: #98989f;
+  text-align: right;
+  margin-top: 0.15625rem;
+}
+.container .main-wrap ul li .list-box .box-add {
+  position: absolute;
+  right: 0.3125rem;
+  bottom: 0.375rem;
+  font-size: 0.375rem;
+  color: #98989f;
 }
 .container #filter-nav .am-offcanvas-bar {
   width: 100%;
@@ -189,7 +255,7 @@ input[type=number]::-webkit-outer-spin-button {
   padding: 0.1875rem 0;
 }
 #all-nav a {
-  display: inline-block;
+  display: block;
   box-sizing: border-box;
   height: 1rem;
   width: 25%;
