--- a/wxtijiantong/css/setList.less
+++ b/wxtijiantong/css/setList.less
@@ -1,13 +1,85 @@
 @import "base.less";
 .container {
     .top-section {
-        display: block;
         height: 4.4*@rex;
         width: 100%;
-        border: none;
-        outline: none;
         background-color: @mainBlue;
         color: white;
+        text-align: center;
+        line-height: 2.4*@rex;
+        font-size: 1.4*@rex;
+        padding: 1*@rex 0;
+        span {
+            margin-left: 0.5*@rex;
+        }
+        div {
+            display: inline-block;
+            background-color: white;
+            width: 80%;
+            height: 2.5*@rex;
+            border-radius: 3*@rex;
+            text-align: left;
+            .iconfont {
+                color: @smallTex;
+                font-size: 1.4*@rex;
+                margin-left: 1*@rex;
+            }
+        }
+    }
+    .main-wrap {
+        ul {
+            li {
+                .list-box {
+                    display: block;
+                    background-color: white;
+                    position: relative;
+                    padding: 1*@rex 10*@rex 1*@rex 1*@rex;
+                    border-bottom: 1px solid @mainBorder;
+                    .box-l {
+                        min-height: 5*@rex;
+                        h6 {
+                            color: @mainBlue;
+                            font-size: 1.6*@rex;
+                            font-weight: normal;
+                        }
+                        p {
+                            margin-top: 0.5*@rex;
+                            font-size: 1.2*@rex;
+                            color: @smallTex;
+                            line-height: 1.6*@rex;
+                            max-height: 4.8*@rex;
+                            overflow: hidden;
+                        }
+                    }
+                    .box-r {
+                        position: absolute;
+                        right: 1*@rex;
+                        top: 1*@rex;
+                        max-width: 8*@rex;
+                        overflow: hidden;
+                        h6 {
+                            font-size: 1.6*@rex;
+                            color: @mainRed;
+                            text-align: right;
+                            font-weight: normal;
+                        }
+                        p {
+                            font-size: 1.2*@rex;
+                            color: @smallTex;
+                            text-align: right;
+                            margin-top: 0.5*@rex;
+                        }
+                    }
+                    .box-add{
+                        position: absolute;
+                        right: 1*@rex;
+                        bottom: 1.2*@rex;
+                        font-size: 1.2*@rex;
+                        color: @smallTex;
+                    }
+                }
+            }
+        }
     }
     #filter-nav {
         .am-offcanvas-bar {
@@ -38,8 +110,7 @@
                         float: left;
                         overflow: hidden;
                         position: relative;
-                        margin-left: 0.5rem;
-//                      height: 1.8*@rex;
+                        margin-left: 0.5rem; //                      height: 1.8*@rex;
                         .more {
                             font-size: 1.2*@rex;
                             color: #888;
@@ -52,9 +123,8 @@
                         a {
                             font-size: 1.2*@rex;
                             min-width: 6*@rex;
-                            padding: 0 0.2*@rex;
-//                          height: 1.8*@rex;
-//                          line-height: 1.8*@rex;
+                            padding: 0 0.2*@rex; //                          height: 1.8*@rex;
+                            //                          line-height: 1.8*@rex;
                             text-align: center;
                             border: 1px solid @mainBlue;
                             color: @mainBlue;
@@ -82,7 +152,7 @@
     -moz-box-shadow: 0 0 10px 0 rgba(155,143,143,0.6);
     padding: 0.6*@rex 0;
     a {
-        display: inline-block;
+        display: block;
         box-sizing: border-box;
         height: 3.2*@rex;
         width: 25%;
