--- a/wxtijiantong/css/shopList.css
+++ b/wxtijiantong/css/shopList.css
@@ -126,7 +126,7 @@ input[type=number]::-webkit-outer-spin-button {
   padding: 0.3125rem 0;
 }
 .container .top-section span {
-  margin-right: 0.3125rem;
+  margin-left: 0.15625rem;
 }
 .container .top-section div {
   display: inline-block;
