--- a/wxtijiantong/css/shopList.less
+++ b/wxtijiantong/css/shopList.less
@@ -37,6 +37,7 @@
                     border-top: none;
                 }
                 .list-top {
+                    display: block;
                     position: relative;
                     padding: 1*@rex 1*@rex 1*@rex 10*@rex;
                     border-bottom: 1px solid @mainBorder;
